# project-blackbox-testing

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VERSIONING.md  pyproject.toml
.github/workflows/: compliance.yml
adapters/java-junit5/: README.md  pom.xml
adapters/java-junit5/src/main/java/dev/blackbox/: BlackBox.java  BlackBoxExtension.java  BundlePaths.java  ManifestWriter.java
adapters/node-playwright/: README.md  eslint.config.cjs  package-lock.json  package.json  tsconfig.json
adapters/node-playwright/src/: blackbox.ts  fixtures.ts
adapters/node-playwright/tests/: blackbox.unit.test.ts  failing.spec.ts
adapters/python-pytest/: README.md  pyproject.toml
adapters/python-pytest/src/pytest_blackbox/: __init__.py  plugin.py
adapters/python-pytest/tests/: test_failing.py  test_plugin_units.py
spec/: bundle-layout.md  manifest.schema.json
spec/compliance/: README.md  validate_manifest.py
spec/compliance/golden/9f2a0c1b3d4e5a6b_20260202T143000Z/: manifest.json
spec/compliance/golden/invalid_attachments_undeclared/: manifest.json
spec/compliance/golden/invalid_attachments_undeclared/attachments/: note.txt
spec/compliance/golden/invalid_extra_file/: manifest.json  rogue.txt
spec/compliance/golden/invalid_missing_context/: manifest.json
spec/compliance/golden/invalid_path_traversal/: manifest.json
spec/compliance/golden/valid_bundle/: manifest.json
spec/compliance/tests/: conftest.py  test_validate_manifest.py
tools/: requirements.txt
tools/scripts/: run_compliance.sh  run_lint.sh
(+3 files in other folders)
