[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-blackbox"
version = "0.1.0"
description = "BlackBox Crash Bundle pytest adapter"
requires-python = ">=3.8"
dependencies = ["pytest>=7.0"]

[project.entry-points.pytest11]
blackbox = "pytest_blackbox.plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
